[package]
name = "wifitify"
description = "Monitor your wifi devices and create hook based behavior."
version = "0.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
keywords = ["wifi", "montior", "hooks", "events"]
edition = "2018"

[dependencies]
# Error handling
anyhow = "1"
better-panic = "0.3"

# Async runtime
futures = "0.3"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "time",
  "macros",
  "io-std",
  "io-util",
] }

# Cli
clap = { version = "3", features = ["derive", "cargo"] }
log = "0.4"
pretty_env_logger = "0.4"

# Wifi related
libwifi = { path = "../../libraries/libwifi" }
pcap = { version = "0.9", features = ['capture-stream'] }
radiotap = "1.3"

# Database
chrono = "0.4"
sqlx = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "migrate",
] }

# General purpose
crossbeam-channel = "0.5"
serde = "1"
serde_derive = "1"
toml = "0.5"
dirs = "4"
