[package]
name = "wifitify"
description = "Monitor your wifi devices and create hook based behavior."
version = "0.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
keywords = ["wifi", "montior", "hooks", "events"]
edition = "2018"

[dependencies]
anyhow = "1"
better-panic = "0.3"
chrono = "0.4"
clap = { version = "4", features = ["derive", "cargo"] }
crossbeam-channel = "0.5"
dirs = "5"
futures = "0.3"
libwifi = { version = "0.3",  path = "../../libraries/libwifi/libwifi" }
log = "0.4"
pcap = { version = "2", features = ['capture-stream'] }
pretty_env_logger = "0.5"
radiotap = "1.3"
serde = "1"
serde_derive = "1"
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "migrate",
] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "time",
  "macros",
  "io-std",
  "io-util",
] }
toml = "0.8"
